--- a/src/ui/styles.styl
+++ b/src/ui/styles.styl
@@ -27,7 +27,7 @@ a {
 }
 
 #panel-container {
-	height: calc(100vh - 110px); // TODO: Not sure why this is necessary. Seems to be an issue with how XD calculates the height of panels.
+	height: calc(100vh - 110px); // Fixes an issue with how XD calculates the height of panels.
 	max-width: 400px;
 	width: 100%;
 	margin: 0 auto;
