Check XD version in the panel
So the minimum version requirement in the marketplace can be lowered.

--- a/src/ui/styles.styl
+++ b/src/ui/styles.styl
@@ -216,11 +216,16 @@ a {
 		}
 	}
 
-	.version {
-		background: #BB2200;
-		color: white;
+	.version, .alert {
+		color: #3F3F3F;
+		background: #eaeaea;
 		padding: 0.25em 0.5em;
 		margin-right: 0.5em;
+	}
+
+	.alert {
+		background: #BB2200;
+		color: white;
 	}
 
 	.vdiv {
