Export text styles

--- a/src/ui/styles.styl
+++ b/src/ui/styles.styl
@@ -176,6 +176,10 @@ a {
     .settings__text-input {
         width: 100%;
         margin: 0;
+
+		& + .settings__checkbox-label {
+			margin-top: 12px;
+		}
     }
 
     .settings__checkbox-label {
