Make errors in results more noticeable

--- a/src/ui/styles.styl
+++ b/src/ui/styles.styl
@@ -231,16 +231,16 @@ a {
 		letter-spacing: 0.05em;
 
 		img {
-			height: 1.1em;
-			margin-bottom: -0.25em;
-			margin-top: -0.2;
+			height: 1.0em;
+			margin-bottom: -0.2em;
+			margin-top: -0.2em;
 			opacity: 0.5;
 		}
 	}
 }
 
 .results-container {
-	letter-spacing: 0.1px;
+	letter-spacing: 0.05em;
 	font-weight: bold;
 	color: #8E8E8E;
 
@@ -251,6 +251,13 @@ a {
 
 		&.help {
 			font-weight: bold;
+		}
+
+		img {
+			height: 1.1em;
+			margin-bottom: -0.25em;
+			margin-top: -0.25em;
+			margin-right: 2px;
 		}
 	}
 
